# pathseg-fewshot

./: .gitignore  README.md  environment.yaml  pyproject.toml
configs/: ade20k_mask2former_semantic.yaml  anorak_fpn_semantic.yaml  anorak_linear_mask2former.yaml  anorak_linear_semantic.yaml  anorak_linear_semantic_fewshot.yaml  anorak_linear_semantic_fewshot_leace.yaml  anorak_protonet_semantic.yaml  anorak_protonet_semantic_fewshot.yaml  fss_meta_semantic.yaml  fss_meta_semantic_validate.yaml  my_ade20k_mask2former_semantic.yaml
notebooks/: build_episodes_anorak.py  build_splits.py  create_anorak_split.py  create_token_embeddings_visu.py  debug_build_episode_sampler.py  debug_fs_dataset.py  debug_protonet.py  explo_anorak_dm.ipynb  explo_build_splits.py  explo_class_index.py  explo_class_ratios.ipynb  explo_darya_model.py  explo_episodes.py  explo_fewshot.ipynb  explo_fs_dataset.py  explo_h0mini.py  explo_hoptimus1.py  explo_model_topo.py  explo_prototypes.py  explo_resnet.ipynb  explo_sampling_episodes.py  explo_stuff.py  explo_tiler.ipynb  explo_trained_models.ipynb  explo_umap_tokens.ipynb  explo_umap_tokens.py  explo_umap_tokens_improved.py  explo_uni2.ipynb  expo_trained_models.ipynb  filter_tile_index_for_training.py
pathseg/: __main__.py  cli.py
pathseg/datasets/: anorak.py  anorak_dataset.py  utils.py
pathseg/leace/: shrinkage.py
pathseg/models/: decoder_block.py  histo_encoder.py  histo_linear_decoder.py  histo_mask2former_decoder.py  meta_linear_decoder.py
pathseg/preprocessing/: build_indexes.py  utils.py
pathseg/protonet/: fit_protonet_fewshot.py  protonet_cli.py
pathseg/tests/: test_pl_linear_semantic.py  test_tiler.py
pathseg/tools/: inspect_class_index.py
pathseg/training/: aigrading_semantic.py  fpn_semantic.py  histo_loss.py  lightning_module.py  linear_semantic.py  mask2former_loss.py  mask2former_semantic.py  metalinear_semantic.py  protonet_utils.py  tiler.py  unet_semantic.py
pathseg_fewshot/: __main__.py  cli.py
pathseg_fewshot/datasets/: ade20k.py  anorak.py  episode.py  episode_datasets.py  (+6 more)
scripts/: generate_class_ratios.py  generate_fewshot_plan.py
(+54 files in other folders)
