[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathseg"
version = "0.1.0"
description = "Benchmarking vision foundation models for histopathology semantic segmentation, this repo is a fork of https://github.com/tue-mps/benchmark-vfm-ss/"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Valentin Oreille" }
]

[project]
dependencies = [
  "click>=8.0",
  "pandas>=2.0",
  "gitignore_parser==0.1.11",
  "jsonargparse[signatures]==4.27.7",
  "matplotlib==3.8.3",
  "timm==0.9.16",
  "wandb==0.16.5",
  "lightning==2.2.1",
  "transformers==4.39.2",
  "scipy==1.12.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=12"]
dev = ["ipykernel==6.29.4", "pytest", "ruff", "pre-commit"]

[project.scripts]
pathseg = "pathseg.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pathseg*"]
